--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ Free HTML CSS Template
    
         <div class="nav-container">
             <a href="https://www.biscuiteatta.com/" class="logo">
-				<img src="/images/logo.png" width="200" height="50">
+				<img src="images/logo.png" width="200" height="50">
             </a>
             <ul class="nav-links">
                 <li><a href="https://www.biscuiteatta.com/" class="active">Home</a></li>
@@ -45,7 +45,7 @@ Free HTML CSS Template
         <h2>Our Signature Taste</h2>
         <div class="menu-grid">
             <div class="menu-item">
-                <img src="/images/attaSalty.jpeg" alt="Truffle Risotto" class="menu-item-image">
+                <img src="images/attaSalty.jpeg" alt="Truffle Risotto" class="menu-item-image">
                 <div class="menu-item-content">
                     <h3>Atta Biscuit(Salty)</h3>
                     <p>Made with whole wheat (Atta), Pure Desi Ghee, iodized salt with azwain(carom seeds) flavour</p>
@@ -54,7 +54,7 @@ Free HTML CSS Template
                 </div>
             </div>
             <div class="menu-item">
-                <img src="/images/attaSweet.jpeg" alt="Grilled Salmon" class="menu-item-image">
+                <img src="images/attaSweet.jpeg" alt="Grilled Salmon" class="menu-item-image">
                 <div class="menu-item-content">
                     <h3>Atta Biscuit(Sweet)</h3>
                     <p>Made with whole wheat flour(Atta), Pure Desi Ghee with sweetnes of Desi Khand(raw unrefined sugar)</p>
@@ -63,7 +63,7 @@ Free HTML CSS Template
                 </div>
             </div>
             <div class="menu-item">
-                <img src="/images/attaJaggery.jpeg" alt="Beef Wellington" class="menu-item-image">
+                <img src="images/attaJaggery.jpeg" alt="Beef Wellington" class="menu-item-image">
                 <div class="menu-item-content">
                     <h3>Atta Biscuit(Jaggery)</h3>
                     <p>Made with whole wheat flour(Atta), Pure Desi Ghee with sweetnes of Jaggery</p>
@@ -72,7 +72,7 @@ Free HTML CSS Template
                 </div>
             </div>
             <div class="menu-item">
-                <img src="/images/besan.jpeg" alt="Lobster Thermidor" class="menu-item-image">
+                <img src="images/besan.jpeg" alt="Lobster Thermidor" class="menu-item-image">
                 <div class="menu-item-content">
                     <h3>Besan Biscuit</h3>
                     <p>Made with whole wheat flour(Atta), Besan, Pure Desi Ghee with sweetnes of Desi Khand(raw unrefined sugar)</p>
@@ -81,7 +81,7 @@ Free HTML CSS Template
                 </div>
             </div>
             <div class="menu-item">
-                <img src="/images/multigrain.jpeg" alt="Duck Confit" class="menu-item-image">
+                <img src="images/multigrain.jpeg" alt="Duck Confit" class="menu-item-image">
                 <div class="menu-item-content">
                     <h3>Multigrain Biscuit</h3>
                     <p>Made with mix flour(atta) of Ragi(Finger millet), Jow(Barley), Jawar(Sorghum or Milo), Chana(Gram)and Pure Desi Ghee with sweetnes of Desi Khand(raw unrefined sugar)</p>
@@ -90,7 +90,7 @@ Free HTML CSS Template
                 </div>
             </div>
             <div class="menu-item">
-                <img src="/images/choclate.png" alt="Chocolate Soufflé" class="menu-item-image">
+                <img src="images/choclate.png" alt="Chocolate Soufflé" class="menu-item-image">
                 <div class="menu-item-content">
                     <h3>Chocolate Biscuit</h3>
                     <p>Made with whole wheat flour(Atta), Pure Desi Ghee with sweetnes of Desi Khand(raw unrefined sugar) with Warm chocolate soufflé</p>
@@ -160,7 +160,7 @@ Free HTML CSS Template
                 </form>
             </div>
             <div class="reservation-right">
-                <img src="/images/multigrain2.png" alt="Restaurant Interior" class="reservation-image">
+                <img src="images/multigrain2.png" alt="Restaurant Interior" class="reservation-image">
             </div>
         </div>
     </section>
@@ -212,4 +212,5 @@ Free HTML CSS Template
 
 <script src="tooplate-bistro-scripts.js"></script>
 </body>
+
 </html>
