--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    
         <div class="nav-container">
             <a href="https://www.biscuiteatta.com/" class="logo">
-				<img src="images/logo.png" width="200" height="50">
+				<img src="images/logo.jpeg" width="200" height="65">
             </a>
             <ul class="nav-links">
                 <li><a href="https://www.biscuiteatta.com/" class="active">Home</a></li>
@@ -81,12 +81,12 @@
                 </div>
             </div>
             <div class="menu-item">
-                <img src="images/choclate.png" alt="Chocolate Soufflé" class="menu-item-image">
+                <img src="images/choclate.png" alt="Bajra" class="menu-item-image">
                 <div class="menu-item-content">
-                    <h3>Chocolate Biscuit</h3>
+                    <h3>Bajra Biscuit</h3>
                     
                    <div class="price">Rs 189/- &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; 230gm</div>
-                    <button class="ingredients-btn" onclick="showIngredients('chocolate-souffle')">View Ingredients</button>
+                    <button class="ingredients-btn" onclick="showIngredients('bajra')">View Ingredients</button>
                 </div>
             </div>
         </div>
@@ -203,3 +203,4 @@
 <script src="tooplate-bistro-scripts.js"></script>
 </body>
 </html>
+
