--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 </div>
             </div>
             <div class="menu-item">
-                <img src="images/choclate.png" alt="Bajra" class="menu-item-image">
+                <img src="images/bajra.jpeg" alt="Bajra" class="menu-item-image">
                 <div class="menu-item-content">
                     <h3>Bajra Biscuit</h3>
                     
@@ -203,4 +203,5 @@
 <script src="tooplate-bistro-scripts.js"></script>
 </body>
 </html>
+
 
