--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class="reservation">
             <div class="reservation-left">
                 <h2>Contact Us</h2>
-                <form action="https://formspree.io/f/xkgdkrbp" method="POST" class="reservation-form">
+                <form action="https://formspree.io/f/xkgdkrbp" method="POST" class="reservation-form" id="contactForm">
 			 		<div class="form-group">
                         <label for="name">Your Name*</label>
                         <input type="text" id="name" name="name" required>
@@ -162,10 +162,60 @@
             <ul id="ingredientsList" class="ingredient-list"></ul>
         </div>
     </div>
+<div id="successPopup" style="
+  display:none;
+  position:fixed;
+  top:50%;
+  left:50%;
+  transform:translate(-50%, -50%);
+  padding:20px 30px;
+  background:#4CAF50;
+  color:#fff;
+  font-size:18px;
+  border-radius:8px;
+  box-shadow:0 0 10px rgba(0,0,0,0.3);
+  z-index:9999; ">
+  Your message has been sent successfully!
+</div>
+<script>
+document.getElementById('contactForm').addEventListener('submit', async function (e) {
+    e.preventDefault(); // stop normal form submit
+
+    const form = e.target;
+    const formData = new FormData(form);
+
+    // Send to Formspree using fetch
+    const response = await fetch(form.action, {
+        method: "POST",
+        body: formData,
+        headers: {
+            'Accept': 'application/json'
+        }
+    });
+
+    if (response.ok) {
+        // Clear form
+        form.reset();
+
+        // Show success popup
+        const popup = document.getElementById('successPopup');
+        popup.style.display = "block";
+
+        // Hide popup after 3 seconds
+        setTimeout(() => {
+            popup.style.display = "none";
+        }, 3000);
+
+    } else {
+        alert("Oops! Something went wrong.");
+    }
+});
+</script>
 
 <script src="tooplate-bistro-scripts.js"></script>
 </body>
 </html>
+
 
 
 
